[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom4ortho"
version = "0.5.1"
description = "A DICOM Implementation for Orthodontic Images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Toni Magni", email = "amagni@open-ortho.org"},
]
keywords = ["DICOM", "VL", "Visible Light Photography", "Orthodontics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "argparse",
    "pydicom",
    "pynetdicom>=2,<3",
    "pillow>=9.2.0",
    "prettytable",
    "numpy",
    "urllib3>=1.26.5",
    "requests (>=2.32.4,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "wrapt",
    "pylint",
    "twine",
    "autopep8",
    "bumpversion",
    "pytest",
    "build"
]

[project.urls]
homepage = 'https://github.com/open-ortho/dicom4ortho'

[project.scripts]
dicom4ortho = "dicom4ortho.__main__:main"
d4o_generate = "dicom4ortho.__main__:generate_uid"

[tool.setuptools.package-data]
"*" = ["LICENSE"]
"dicom4ortho" = ["resources/image_types.csv", "resources/codes.csv", "resources/views.csv"]

[tool.setuptools.packages.find]
include = ["dicom4ortho*"]